tests/snapshots/compiler_error_fixtures/named_field_not_on_type_e463.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/named_field_not_on_type_e463.flx
== compile ==
failed (compile)
== diagnostics ==
error[E430]: Could Not Infer Concrete Type

Could not determine a concrete type for `main` at the public function signature. Inferred type: `() -> _`.

  examples/compiler_errors/named_field_not_on_type_e463.flx:12:1
   |
12 | fn main() {
   | ^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn main(x: Int, y: Int): Int`


error[E463]: Field Not On Type

Type `Point` has no field `z`.

  examples/compiler_errors/named_field_not_on_type_e463.flx:14:5
   |
14 |     p.z
   |     ^^^

Found 2 errors.
== stdout ==
<not executed>
